# pmoke

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  requirements.txt
.github/: release-drafter.yml
.github/workflows/: ci.yml  performance.yml  release-drafter.yml  update-cargo-lock.yml
benches/: performance.rs
crates/gpib-rs/: Cargo.toml  build.rs
crates/gpib-rs/examples/: com.rs
crates/gpib-rs/src/: board.rs  conf.rs  consts.rs  driver.rs  error.rs  ffi.rs  instrument.rs  lib.rs  tmo.rs  util.rs
crates/instruments/: Cargo.toml
crates/instruments/examples/dummy/: dummy.rs
crates/instruments/examples/keithley/: keithley2000.rs
crates/instruments/examples/nf/: wf1946b.rs
crates/instruments/examples/rigol/: dho5108.rs
crates/instruments/src/: instruments.rs  lib.rs
crates/instruments/src/dummy/: dummy.rs  dummy_inst.rs  mod.rs
crates/instruments/src/keithley/: keithley2000.rs  mod.rs
crates/instruments/src/nf/: mod.rs  wf1946b.rs
crates/instruments/src/rigol/: dho5108.rs  mod.rs
crates/lockin-core/: Cargo.toml
crates/lockin-core/src/: lib.rs  lockin.rs
docs/: performance.md
scripts/: benchmark_plot.py  compare_performance.py  test_benchmark_plot.py  test_compare_performance.py
src/: analysis_results.rs  cli.rs  config.rs  config.toml  config_tests.rs  constants.rs  lib.rs  main.rs  plot.rs  python.rs  test_support.rs  ui.rs
src/commands/: analyse.rs  analyze.rs  auto.rs  automeasure.rs  autoshot.rs  completions.rs  config.rs  doctor.rs  export.rs  fetch.rs  image.rs  kerr.rs  li.rs  mod.rs  phase.rs  process.rs  raw.rs  reference.rs  run_dir.rs  screenshot.rs  sensor.rs  show.rs  single.rs  trigger.rs
src/commands/export/: npy.rs
src/commands/fetch/: tests.rs
src/commands/monitor/: actions.rs  app.rs  clipboard.rs  formatting.rs  layout.rs  mod.rs  output.rs  panels.rs  tests.rs  timeline.rs  view.rs
src/communications/: function_generator.rs  mod.rs  oscilloscope.rs  validator.rs
src/config/: load.rs  migration.rs  paths.rs  render.rs  schema.rs  validation.rs
src/config/migration/: tests.rs
src/config/tests/: general.rs  legacy.rs  mod.rs  v4.rs
src/kerr/: kerr_harmonics_analysis.rs  kerr_standard_analysis.rs  mod.rs  save.rs
src/kerr/pytools/: kerr_harmonics_analysis.py  kerr_standard_analysis.py  test_kerr_harmonics_analysis.py  (+1 more)
src/lockin/: debug.rs  lockin_core.rs  lockin_core_tests.rs  lockin_params.rs  lockin_params_tests.rs  lockin_plot.rs  mod.rs  provenance.rs  reference.rs  resolve.rs  save.rs  stride.rs  time.rs
src/phase/: mod.rs  omega_t0_analysis.rs  phase_rotation_plot.rs  rotator.rs  save.rs
src/utils/: channels.rs  checksum.rs  csv.rs  mod.rs  raw_csv.rs  raw_data.rs  time_axis.rs  waveform.rs
tests/: config_migrate_cli.rs  config_upgrade_cli.rs
tests/fixtures/: config_v3.toml
(+28 files in other folders)
