[package]
name = "pmoke"
version = "0.1.5"
edition = "2024"


[workspace]
members = [
  "crates/gpib-rs",
  "crates/instruments",
]

[dependencies]
gpib-rs = { path = "crates/gpib-rs" , optional = true}
instruments = { path = "crates/instruments" , optional = true}
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
serde_path_to_error= "0.1.20"
clap = { version = "4.5.51", features = ["derive"] }
serde_json = "1.0.145"
pyo3 = { version = "0.27.1", features = ["auto-initialize"] }
colored = "3.0.0"
clap_complete = "4.5.60"
dirs = "6.0.0"
csv = "1.4.0"
rayon = "1.11.0"

[features]
default = ["hw"]

hw = ["dep:gpib-rs", "dep:instruments"]
