[package]
name = "pmoke"
version = "0.1.6"
edition = "2024"

[workspace]
members = [
  "crates/gpib-rs",
  "crates/instruments",
]

[dependencies]
gpib-rs = { path = "crates/gpib-rs", optional = true }
instruments = { path = "crates/instruments", optional = true }
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
serde_path_to_error = "0.1.20"
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.150"
pyo3 = { version = "0.29.0", features = ["auto-initialize"] }
console = "0.16.3"
indicatif = "0.18.4"
comfy-table = "7.2.2"
ratatui = { version = "0.30.1", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
arboard = "3.6.1"
clap_complete = "4.6.5"
dirs = "6.0.0"
csv = "1.4.0"
rayon = "1.12.0"
meval = "0.2.0"
num-complex = "0.4.6"
tachyonfx = "0.25.0"
tui-spinner = "0.2.3"

[features]
default = ["hw"]

hw = ["dep:gpib-rs", "dep:instruments"]
